[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/world.gd" type="Script" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/brick_white.png" type="Texture" id=3]
[ext_resource path="res://camera.gd" type="Script" id=4]
[ext_resource path="res://ARCADECLASSIC.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://objects/Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/4_players/Level0.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 64, 512 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 512, 64 )

[sub_resource type="DynamicFont" id=3]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[node name="World" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform", "Z Index" ]

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Bounds" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
input_pickable = false
collision_layer = 16
collision_mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds" index="0"]

position = Vector2( -576, 0 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds" index="1"]

position = Vector2( 576, 0 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounds" index="2"]

position = Vector2( 0, -576 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bounds" index="3"]

position = Vector2( 0, 577 )
shape = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bounds" index="4"]

position = Vector2( -512, -352 )
build_mode = 0
polygon = PoolVector2Array( 0, 96, 0, -160, 256, -160, 256, -32, 128, 96 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Bounds" index="5"]

position = Vector2( 352, -513.744 )
rotation = 1.5708
build_mode = 0
polygon = PoolVector2Array( 0, 96, 0, -160, 256, -160, 256, -32, 128, 96 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Bounds" index="6"]

position = Vector2( 510.923, 352.709 )
rotation = 3.14159
build_mode = 0
polygon = PoolVector2Array( 0, 96, 0, -160, 256, -160, 256, -32, 128, 96 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Bounds" index="7"]

position = Vector2( -354.15, 512 )
rotation = 4.71239
build_mode = 0
polygon = PoolVector2Array( 0, 96, 0, -160, 256, -160, 256, -32, 128, 96 )
_sections_unfolded = [ "Transform" ]

[node name="Graphics" type="Node2D" parent="Bounds" index="8"]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Bounds/Graphics" index="0"]

position = Vector2( 0, -576 )
scale = Vector2( 8, 4 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Bounds/Graphics" index="1"]

position = Vector2( 0, 576 )
scale = Vector2( 8, 4 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Bounds/Graphics" index="2"]

position = Vector2( -576, 0 )
scale = Vector2( 1, 32 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="Bounds/Graphics" index="3"]

position = Vector2( 576, 0 )
scale = Vector2( 1, 32 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="Bounds/Graphics" index="4"]

position = Vector2( -288, -448 )
scale = Vector2( 0.5, 4 )
texture = ExtResource( 3 )

[node name="Sprite6" type="Sprite" parent="Bounds/Graphics" index="5"]

position = Vector2( 288, -448 )
scale = Vector2( 0.5, 4 )
texture = ExtResource( 3 )

[node name="Sprite13" type="Sprite" parent="Bounds/Graphics" index="6"]

position = Vector2( -447.24, -446.799 )
rotation = 0.785398
scale = Vector2( 2.80786, 5.71106 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite14" type="Sprite" parent="Bounds/Graphics" index="7"]

position = Vector2( 446.929, 447.343 )
rotation = 0.785398
scale = Vector2( 2.80786, 5.71106 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite15" type="Sprite" parent="Bounds/Graphics" index="8"]

position = Vector2( -447.671, 447.973 )
rotation = -0.785398
scale = Vector2( 2.80786, 5.71106 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite16" type="Sprite" parent="Bounds/Graphics" index="9"]

position = Vector2( 448.419, -446.275 )
rotation = -0.785398
scale = Vector2( 2.80786, 5.71106 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite7" type="Sprite" parent="Bounds/Graphics" index="10"]

position = Vector2( 288, 448 )
scale = Vector2( 0.5, 4 )
texture = ExtResource( 3 )

[node name="Sprite8" type="Sprite" parent="Bounds/Graphics" index="11"]

position = Vector2( -288, 448 )
scale = Vector2( 0.5, 4 )
texture = ExtResource( 3 )

[node name="Sprite9" type="Sprite" parent="Bounds/Graphics" index="12"]

position = Vector2( -448, -288 )
scale = Vector2( 1, 2 )
texture = ExtResource( 3 )

[node name="Sprite10" type="Sprite" parent="Bounds/Graphics" index="13"]

position = Vector2( -448, 288 )
scale = Vector2( 1, 2 )
texture = ExtResource( 3 )

[node name="Sprite11" type="Sprite" parent="Bounds/Graphics" index="14"]

position = Vector2( 448, 288 )
scale = Vector2( 1, 2 )
texture = ExtResource( 3 )

[node name="Sprite12" type="Sprite" parent="Bounds/Graphics" index="15"]

position = Vector2( 448, -288 )
scale = Vector2( 1, 2 )
texture = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Interface" type="CanvasLayer" parent="." index="3"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="UI" type="Control" parent="Interface" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MessageLabel" type="Label" parent="Interface/UI" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -65.0
margin_right = 256.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Breakout Boi"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="GameOverHUD" type="Control" parent="Interface/UI" index="1"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/UI/GameOverHUD" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -192.0
margin_top = 64.0
margin_right = 228.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="RestartButton" type="Button" parent="Interface/UI/GameOverHUD/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 420.0
margin_bottom = 64.0
rect_min_size = Vector2( 420, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Restart"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="QuitButton" type="Button" parent="Interface/UI/GameOverHUD/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 420.0
margin_bottom = 160.0
rect_min_size = Vector2( 420, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit To Main Menu"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Lives" type="Control" parent="Interface/UI" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="P1" type="Label" parent="Interface/UI/Lives" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 160.0
rect_min_size = Vector2( 360, 160 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "p1   lives
10"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="P2" type="Label" parent="Interface/UI/Lives" index="1"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -360.0
margin_bottom = 160.0
rect_min_size = Vector2( 360, 160 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "p2   lives
10"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="P3" type="Label" parent="Interface/UI/Lives" index="2"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -160.0
margin_right = 360.0
rect_min_size = Vector2( 360, 160 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "p3   lives
10"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="P4" type="Label" parent="Interface/UI/Lives" index="3"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -360.0
margin_top = -160.0
rect_min_size = Vector2( 360, 160 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "p4   lives
10"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Goals" type="Node2D" parent="." index="4"]

editor/display_folded = true

[node name="Goal1" parent="Goals" index="0" instance=ExtResource( 6 )]

editor/display_folded = true
position = Vector2( 0, 448 )

[node name="Goal2" parent="Goals" index="1" instance=ExtResource( 6 )]

position = Vector2( 0, -448 )
player = 1

[node name="Goal3" parent="Goals" index="2" instance=ExtResource( 6 )]

editor/display_folded = true
position = Vector2( -448.519, 1.57028 )
rotation = 1.5708
_sections_unfolded = [ "Collision", "Transform" ]
player = 2

[node name="Goal4" parent="Goals" index="3" instance=ExtResource( 6 )]

editor/display_folded = true
position = Vector2( 444.78, 1.57028 )
rotation = 1.5708
_sections_unfolded = [ "Collision", "Transform" ]
player = 3

[node name="StartPositions" type="Node2D" parent="." index="5"]

editor/display_folded = true
_sections_unfolded = [ "Transform" ]

[node name="Position1" type="Position2D" parent="StartPositions" index="0"]

position = Vector2( 0, 384 )
_sections_unfolded = [ "Transform" ]

[node name="Position2" type="Position2D" parent="StartPositions" index="1"]

position = Vector2( 0.000973701, -384 )
rotation = 3.14159
_sections_unfolded = [ "Transform" ]

[node name="Position3" type="Position2D" parent="StartPositions" index="2"]

position = Vector2( -384.014, 0 )
rotation = 1.5708
_sections_unfolded = [ "Transform" ]

[node name="Position4" type="Position2D" parent="StartPositions" index="3"]

position = Vector2( 384, 0 )
rotation = 4.71239
_sections_unfolded = [ "Transform" ]

[node name="BallSpawnPositions" type="Node2D" parent="." index="6"]

editor/display_folded = true

[node name="Position1" type="Position2D" parent="BallSpawnPositions" index="0"]

position = Vector2( 0, 320 )
_sections_unfolded = [ "Transform" ]

[node name="Position2" type="Position2D" parent="BallSpawnPositions" index="1"]

position = Vector2( 0, -320 )
_sections_unfolded = [ "Transform" ]

[node name="Position3" type="Position2D" parent="BallSpawnPositions" index="2"]

position = Vector2( -320, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Position4" type="Position2D" parent="BallSpawnPositions" index="3"]

position = Vector2( 320, 0 )
_sections_unfolded = [ "Transform" ]

[node name="StartCountdownTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="GameOverTimer" type="Timer" parent="." index="8"]

pause_mode = 2
process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="BallRespawnTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="NextLevelTimer" type="Timer" parent="." index="10"]

pause_mode = 2
process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="Levels" type="Node2D" parent="." index="11"]

_sections_unfolded = [ "Transform" ]

[node name="Level" parent="Levels" index="0" instance=ExtResource( 7 )]

[connection signal="button_down" from="Interface/UI/GameOverHUD/VBoxContainer/RestartButton" to="." method="restart"]

[connection signal="button_down" from="Interface/UI/GameOverHUD/VBoxContainer/QuitButton" to="." method="quit_to_main_menu"]


[editable path="Goals/Goal3"]
[editable path="Goals/Goal4"]
